<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/bot_menu_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/cancel"
        app:showAsAction="always" />

    <item
        android:id="@+id/bot_menu_route1"
        android:title="@string/route1"
        app:showAsAction="always" />

    <item
        android:id="@+id/bot_menu_route2"
        android:title="@string/route2"
        app:showAsAction="always" />

    <item
        android:id="@+id/bot_menu_change"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/change_route"
        app:showAsAction="always" />

    <item
        android:id="@+id/bot_menu_accept"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/accept"
        app:showAsAction="always" />


</menu>

