<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">


    <Button
        android:id="@+id/reg_signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="135dp"
        android:text="@string/signup_btn"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_textInputLayout3" />

    <com.google.android.material.textfield.TextInputLayout


        android:id="@+id/reg_textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="78dp"
        android:ems="12"
        android:hint="@string/username"
        android:selectAllOnFocus="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout


        android:id="@+id/reg_textInputLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="78dp"
        android:ems="12"
        android:hint="@string/mail"
        android:selectAllOnFocus="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_textInputLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:layout_marginEnd="78dp"
        android:hint="@string/password"
        android:visibility="visible"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_textInputLayout4"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_textInputLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="22dp"
        android:layout_marginEnd="78dp"
        android:hint="@string/password_repeat"
        android:visibility="visible"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_textInputLayout2"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_pass_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/reg_title"
        android:layout_width="204dp"
        android:layout_height="58dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="104dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>